# nodus-edge

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  nodusnet-updater.sh  setup.py
data/: repeaters_2m_us.json
docs/: pi-edge-scaling.md
src/: pyproject.toml
src/nodus_edge/: __init__.py  __main__.py  aprs_pipeline.py  config.py  connectivity.py  coverage.py  diagnostic_collector.py  fm_pipeline.py  hallucination_filter.py  health_server.py  heartbeat.py  hf_pipeline.py  main.py  orion_lookup.py  pipeline.py  rem_checkin.py  schema.py  utils.py  validation.py
src/nodus_edge/dashboard/: __init__.py  segment_store.py  server.py  sync_cache.py
src/nodus_edge/dashboard/static/: app.js  index.html  style.css
src/nodus_edge/data/: __init__.py  fetch_callsigns.py  fetch_repeaterbook.py  ham_data.py  operator_cache.py  us_states.py  watchlist.yaml
src/nodus_edge/forwarding/: __init__.py  diagnostic_mqtt.py  emitter.py  synapse_publisher.py
src/nodus_edge/ingestion/: __init__.py  adaptive_scanner.py  airband_scanner.py  aprs_decoder.py  cat_reader.py  fm_parser.py  fm_scanner.py  hf_audio_capture.py  morse_decoder.py  parser.py  tr_mapper.py  tr_schema.py  tr_watcher.py  watcher.py
src/nodus_edge/threading/: __init__.py  keyword_scanner.py  thread_grouper.py
src/nodus_edge/transcription/: __init__.py  audit_log.py  whisper_client.py
support-sidecar/: Dockerfile  entrypoint.sh  support-agent-key.pub
whisper-cpu/: Dockerfile  whisper_api.py
