[project]
name = "nodus-edge"
version = "1.0.1"
description = "Nodus Edge - Distributed Radio Ingestion for Public Safety Intelligence"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0.0",
    "pydantic-settings>=2.0,<3.0.0",
    "watchdog>=3.0",
    "requests>=2.31",
    "structlog>=23.0",
    "httpx>=0.26.0,<1.0.0",
    "numpy>=1.24",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "aprslib>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
nodus-edge = "nodus_edge.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
